--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -7,6 +7,12 @@ on:
       - main
       - 'feature/*'
     
+env:
+  MONGO_URI: ${{ vars.MONGO_URI }}
+  MONGO_USERNAME: ${{ vars.MONGO_USERNAME }}
+  MONGO_PASSWORD: ${{ secrets.MONGO_PASSWORD }}
+  
+
 jobs:
     unit-testing:
         name: Unit Testing
