--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -70,3 +70,24 @@ jobs:
           name: code-coverage-result
           path: coverage
           retention-days: 5
+
+  docker:
+    name: Containerisation
+    runs-on: ubuntu-latest
+    needs: [unit-testing, code-coverage]
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Docker Login
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and Push Image
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          tags: ghcr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }}
