--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -85,11 +85,12 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: '${{ github.repository_owner }}'
+          password: '${{ secrets.GITHUB_TOKEN }}'
 
       - name: Build and Push Image
         uses: docker/build-push-action@v5
         with:
+          context: .
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }}
+          tags: 'ghcr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }}'
