--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -86,7 +86,7 @@ jobs:
         with:
           registry: ghcr.io
           username: '${{ github.repository_owner }}'
-          password: '${{ secrets.GITHUB_TOKEN }}'
+          password: '${{ secrets.ACTIONS_PAT }}'
 
       - name: Build and Push Image
         uses: docker/build-push-action@v5
